login component and all related components are added

--- a/src/app/store/storeFooter.component.html
+++ b/src/app/store/storeFooter.component.html
@@ -77,13 +77,13 @@
                                 <h5>MY ACCOUNT</h5>
                                 <ul class="list-unstyled">
                                     <li>
-                                        <a ui-sref="myaccount">My Account</a>
+                                        <a>My Account</a>
                                     </li>
                                     <li>
-                                        <a ui-sref="myaccount({view: 'orderTab'})">Order History</a>
+                                        <a >Order History</a>
                                     </li>
                                     <li>
-                                        <a ui-sref="myaccount({view: 'wishlistTab'})">Wish List</a>
+                                        <a>Wish List</a>
                                     </li>
                                     <!-- <li>
                                 <a>Newsletter</a>
