--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,1 +1,182 @@
-<h2>Welcome to store component </h2>
+<div class="main-content">
+
+    <!--<div class="container">
+
+    <flex-slider flex-slide="s in mySlides" prev-text="" next-text="">
+        <li>
+            <img ng-src="{{s}}" class="img-full">
+        </li>
+    </flex-slider>
+
+    <swiper autoplay="5000" effect="slide" slides-per-view="1" loop="true">
+        <slides>
+            <slide ng-repeat="s in mySlides">
+                <img ng-src="{{s}}" class="img-full" noloading="true">
+            </slide>
+        </slides>
+        <prev></prev>
+        <next></next>
+        <pagination></pagination>
+    </swiper>
+
+    <div class="row">
+        <div class="col-md-2" ng-repeat="s in mySlides">
+            <a ng-href="{{s}}" rel="gal" fancybox>
+                <img ng-src="{{s}}" class="img-full">
+            </a>
+        </div>
+        <div class="col-md-2">
+            <a class="various fancybox.iframe" href="http://www.youtube.com/embed/L9szn1QQfas?autoplay=1" fancybox><img ng-src="http://img.youtube.com/vi/L9szn1QQfas/maxresdefault.jpg" class="img-full"></a>
+        </div>
+    </div>
+
+</div>-->
+    <section>
+        <div class="cloth-cat">
+            <!-- Swiper -->
+            <swiper [config]="config" [(index)]="index">
+                <div *ngFor="let item of imgsUrlArray" class=" cloth-cat__banner-detail relate">
+                    <a href="" target="_blank">
+                        <img [src]="item.imgUrl" alt="" srcset="">
+                    </a>
+                    <div class="get-center text-uppercase">
+                        <h1>{{item.name}}</h1>
+                        <h3>{{item.desc}}</h3>
+                        <p>
+                            <a> <button class="btn shop--now">Shop Now</button></a>
+                        </p>
+                    </div>
+                </div>
+            </swiper>
+            <!-- <ul>
+                <div class="custom-flex-nav">
+                    <ul class="flex-direction-nav">
+                        <li class="flex-nav-prev"><a class="flex-prev" href="#"></a></li>
+                        <li class="flex-nav-next"><a class="flex-next" href="#"></a></li>
+                    </ul>
+                </div>
+            </ul> -->
+        </div>
+
+    </section>
+    <!--start of All Categorie-->
+    <section class="new-arrival">
+        <div class="new-arrival__title text-center ">
+            <h1 class="text-uppercase new-arrival--border--line homepg-title">All category</h1>
+        </div>
+        <div class="new-arrival__img">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="new-arrival__slider">
+
+                            <swiper [config]="allCatConfig" [(index)]="index">
+                                <div class=" new-arrival__banner-detail " *ngFor="let allCat of allCatArrayObj">
+                                    <div class="relate">
+                                        <img [src]="allCat.imgUrl" alt="" class="img-responsive">
+                                        <div class="featured__icon-cart">
+                                            <i class="fa fa-shopping-cart"></i>
+                                        </div>
+                                        <div class="featured__icon-heart">
+                                            <i aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                    <div class="get-left">
+                                        <h3 class="homepg-slider-product-cost"><i class="fa fa-inr"
+                                                aria-hidden="true"></i>{{allCat.cost}}</h3>
+                                        <h4 class="homepg-slider-product-name text-uppercase">
+                                            {{allCat.prodName}}
+                                        </h4>
+                                        <div class="abslt-buynow-btn">
+                                            <button class="btn buynow--btn btn--mob-modal text-uppercase">buy</button>
+                                            <!-- <buttton type="btn" class="btn buynow--btn btn--mob-modal text-uppercase">buy</buttton> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </swiper>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End of All Categorie-->
+    <!--start of new arrivals-->
+    <section class="new-arrival">
+        <div class="new-arrival__title text-center ">
+            <h1 class="text-uppercase new-arrival--border--line homepg-title">new arrivals</h1>
+        </div>
+        <div class="new-arrival__img">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-9 col-sm-9 col-md-offset-3 col-sm-offset-3  padd-rt0">
+                        <div class="new-arrival__slider">
+                                <swiper [config]="newCatConfig" [(index)]="index">
+                                    <div class=" new-arrival__banner-detail " *ngFor="let newCat of allCatArrayObj">
+                                        <div class="relate">
+                                            <img [src] = "newCat.imgUrl" alt="" class="img-responsive">
+                                            <div class="featured__icon-cart">
+                                                <i class="fa fa-shopping-cart"></i>
+                                            </div>
+                                            <div class="featured__icon-heart">
+                                                <i aria-hidden="true"></i>
+                                            </div>
+                                        </div>
+                                        <div class="get-left">
+                                            <h3 class="homepg-slider-product-cost"><i class="fa fa-inr" aria-hidden="true"></i>{{newCat.cost}}</h3>
+                                            <h4 class="homepg-slider-product-name text-uppercase">
+                                                {{newCat.prodName}}
+                                            </h4>
+                                            <div class="abslt-buynow-btn">
+                                                <button class="btn buynow--btn btn--mob-modal text-uppercase">buy</button>
+                                                <!-- <buttton type="btn" class="btn buynow--btn btn--mob-modal text-uppercase">buy</buttton> -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </swiper>
+                                    <!-- <div class="test">
+                                        <ul class="flex-direction-nav">
+                                            <li class="flex-nav-prev"><a class="flex-prev" href="#"></a></li>
+                                            <li class="flex-nav-next"><a class="flex-next" href="#"></a></li>
+                                        </ul>
+                                    </div> -->
+                                  
+                               
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--end of new arrivals-->
+ 
+    <!--Start of Blog section-->
+    <article>
+        <div class="blog">
+            <div class="container">
+                <div class="blog__title text-center">
+                    <h1 class="homepg-title text-uppercase blog--border--line">blogs</h1>
+                </div>
+                <div class="blog__slider">
+                    <!-- Swiper -->
+                    <swiper [config]="allCatConfig" [(index)]="index">
+                        <article class="blog__banner-detail relate" *ngFor="let blog of blogs">
+                            <div class="relate">
+                                <a> <img [src]="blog.imgUrl" alt="" class="img-responsive"></a>
+                                <div class="blog__desc">
+                                    <h3 class="text-uppercase">{{blog.name}}</h3>
+                                    <p class="typedin-desc">{{blog.desc}}</p>
+                                    <p class="relate extra-content"><a>Read
+                                            more</a></p>
+                                </div>
+                            </div>
+    
+                        </article>
+                    </swiper>
+                </div>
+            </div>
+        </div>
+    </article>
+    <!--End of Blog section-->
+
+</div>
