--- a/src/app/store/storeHeader.component.html
+++ b/src/app/store/storeHeader.component.html
@@ -43,46 +43,8 @@
 
                     <li>
                         <a href="# " class="mycart">
-
-                            <i class="fa fa-shopping-cart "></i> Cart ( <span
-                               >length</span>
-                            <span >0</span> )</a>
-                        <ul class="cart-dropdown-menu dropdown-menu" >
-                            <li>
-                                <div class="dropdown-menu__dropdown-cart ">
-                                    <div class="inline-block img ">
-                                        <img  alt="shirt_img
-                        " class="img-responsive ">
-                                    </div>
-                                    <div class="inline-block desc ">
-                                        <h5>productname</h5>
-                                        <p><i class="fa fa-inr " aria-hidden="true "><span class="product-cost">pirce</span></i></p>
-                                        <p></p>
-
-                                        <div class="inline-block__size ">
-                                            <div class="inline-block ">
-                                                <div class="size ">
-                                                    <span>size.name</span>
-                                                </div>
-                                            </div>
-                                            <div class="inline-block ">
-                                                <span>Size</span>
-                                            </div>
-                                        </div>
-                                        <p>
-                                            <button class="btn remove--btn " ><i class="fa fa-trash-o " aria-hidden="true "></i>Remove</button>
-                                        </p>
-                                    </div>
-                                </div>
-
-                            </li>
-                            <div class="dropdown-menu__btn text-center ">
-                                <a> <button class="btn btn--brown-checkout"
-                                       >CHECKOUT</button></a>
-                                <p ></p>
-                            </div>
-                        </ul>
-
+                             <cart-summery></cart-summery>   
+                        </a> 
                     </li>
 
                     <li ><a><button class="btn header--login ">LOGIN</button></a>
