--- a/src/app/admin/auth.component.html
+++ b/src/app/admin/auth.component.html
@@ -3,18 +3,25 @@
         <div class="col-md-6 col-md-offset-3">
 
             <h2 class="text-center">Burnt Umber Admin Login</h2>
-            <form class="form-horizontal" #form="ngForm" novalidate  (ngSubmit)="checkAdminLogin(form)">
+
+            <div class="alert alert-warning" *ngIf="errorMessageStatus">
+                <strong>Warning!</strong> {{errorMessage}}.
+            </div>
+
+            <form class="form-horizontal" #form="ngForm" novalidate (ngSubmit)="checkAdminLogin(form)">
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="email">Email:</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="email" #email="ngModel" placeholder="Enter email" name="email" [(ngModel)]="obj.email" required>
+                        <input type="email" class="form-control" id="email" #email="ngModel" placeholder="Enter email"
+                            name="email" [(ngModel)]="adminInfo.emailId" required>
                         <span *ngIf="submitted && email.invalid" class="text-danger">Enter your email</span>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="pwd">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="pwd" #pwd="ngModel" placeholder="Enter password" name="pwd" [(ngModel)]="obj.pwd" required> 
+                        <input type="password" class="form-control" id="pwd" #pwd="ngModel" placeholder="Enter password"
+                            name="pwd" [(ngModel)]="adminInfo.pwd" required>
                         <span *ngIf="submitted && pwd.invalid" class="text-danger">Enter your password</span>
                     </div>
                 </div>
@@ -31,6 +38,7 @@
                     </div>
                 </div>
             </form>
+            <div><button class="btn btn-default" (click)="showDebugOutput()">Debug</button></div>
         </div>
     </div>
 </div>
