--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,18 +4,53 @@
     </div>
     
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="btn-group-vertical">
 
                 <p><button type="button" class="btn btn-primary" (click)="showPanel(1)">Home banner upload</button></p>
                 <p><button type="button" class="btn btn-primary" (click)="showPanel(2)">Users orders</button></p>
                 <p> <button type="button" class="btn btn-primary" (click)="showPanel(3)">blogs upload</button></p>
-                <p> <button type="button" class="btn btn-primary" (click)="testCall()" >Test</button></p>
+                <!-- <p> <button type="button" class="btn btn-primary" (click)="testCall()" >Test</button></p> -->
 
 
             </div>
         </div>
-        <div class="col-md-7" *ngIf="activeIndex === 2" >
+        <div class="col-md-10" *ngIf="activeIndex === 1">
+            <h2>Upload Banner</h2>
+            <form class="form-inline" #form="ngForm"  novalidate (ngSubmit)="uploadBannerInfo(form)">
+                <div class="form-group">
+
+                    <div class="input-group">
+                        <span class="input-group-addon">Banner image</span>
+                        <input type="file"  class="form-control" name="fileHomeBanner" (change)="changeBannerFile($event.target.files)" id="file" required>
+
+                        <span *ngIf="submitted && desc.invalid" class="text-danger" >*Select file</span>
+                    </div>
+                   
+                    <div class="input-group">
+                        <span class="input-group-addon">Text</span>
+
+                        <input id="homeBannerName" type="text" class="form-control" [(ngModel)]="homeBannerInput.bannerName" id="name" #name="ngModel" name="bannerName" placeholder="Banner Name" required >
+
+                        <span *ngIf="submitted && name.invalid" class="text-danger" >*Enter banner name</span>
+                    </div>
+
+                    <div class="input-group">
+                        <span class="input-group-addon">Text</span>
+
+                        <input id="homeBannerDesc" type="text" class="form-control" [(ngModel)]="homeBannerInput.bannerDesc" id="desc" #desc="ngModel" name="bannerDesc" placeholder="Banner Desc" required>
+
+                        <span *ngIf="submitted && desc.invalid" class="text-danger" >*Enter banner desc</span>
+
+                    </div>
+                    
+                </div>
+
+                <p><button class="btn btn-primary"  type="submit">Submit</button></p>
+            </form>
+        </div>
+
+        <div class="col-md-10" *ngIf="activeIndex === 2" >
             <div>
                 <table class="table table-hover">
                     <thead>
@@ -31,7 +66,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>John</td>
+                            <td>{{orderDetails}}</td>
                             <td>Doe</td>
                             <td>john@example.com</td>
                             <td>John</td>
@@ -54,11 +89,8 @@
 
             </div>
         </div>
-        <div class="col-md-7" *ngIf="activeIndex === 1">
-            <h2>In admin upload</h2>
-            <input type="file" class="form-control" name="" id="">
-        </div>
-        <div class="col-md-7" *ngIf="activeIndex === 3">
+        
+        <div class="col-md-10" *ngIf="activeIndex === 3">
            
         </div>
     </div>
