products API are working properly

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@
      </div>
     <div class="well text-center">
         <h2><strong>{{orderDetails}}</strong>, welcome in Admin panel
-            <button class="btn btn-danger pull-right">Logout</button>
+            <button class="btn btn-danger pull-right" (click)= "logout()">Logout</button>
         </h2>
 
        
