--- a/src/app/store/individualProduct.component.html
+++ b/src/app/store/individualProduct.component.html
@@ -1,12 +1,13 @@
 <div class="main-content">
     <div class="container">
+    
         <div class="individual-container relate">
             <div class="row">
                 <div class="col-md-5 col-xs-12 padd-rt0">
                     <div class="individual-first relate visible-lg">
                         <div class="product-img">
                               
-                            <img [src]= "indvProduct.ProductImg" alt="" class="img-responsive" srcset="">
+                            <img [src]= "indvProduct.ProductImg" alt="" class="img-responsive">
                         </div>
 
                     </div>
