--- a/src/app/store/storeFooter.component.html
+++ b/src/app/store/storeFooter.component.html
@@ -111,6 +111,7 @@
                                 <p>
                                     <button class="btn contact--btn ">Call us: +91 8754555035<br>+91 9768349972.</button>
                                 </p>
+                                <p><button class="btn contact--btn " routerLink="/admin" >Admin</button></p>
                             </div>
                             <div class="footer-up__img">
                                 <img src="../../assets/images/Home/20.png" alt="" class="img-responsive">
