--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -33,18 +33,19 @@
 </div>-->
     <section>
         <div class="cloth-cat">
+          
             <!-- Swiper -->
             <swiper [config]="config" [(index)]="index">
-                <div *ngFor="let item of getProducts" class=" cloth-cat__banner-detail relate">
+                <div *ngFor="let item of homeBannerProducts; let i = index" class=" cloth-cat__banner-detail relate">
                     <div>
                         <a target="_blank" data-id="item.ProductId">
-                            <img [src]="item.ProductImg" alt="" srcset="">
+                            <img [src]="item.BannerImg" alt="" srcset="">
                         </a>
                         <div class="get-center text-uppercase">
-                            <h1>{{item.ProductName}}</h1>
-                            <h3>{{item.ProductName}}</h3>
+                            <h1>{{item.BannerName}}</h1>
+                            <h3>{{item.BannerDesc}}</h3>
                             <p>
-                                <a> <button class="btn shop--now"  [routerLink]="['/individualProduct', item.ProductId]">Shop Now</button></a>
+                                <a> <button class="btn shop--now"  [routerLink]="['/individualProduct', item.BannerImgId]">Shop Now</button></a>
                             </p>
                         </div>
 
@@ -74,7 +75,7 @@
                         <div class="new-arrival__slider">
 
                             <swiper [config]="allCatConfig" [(index)]="index">
-                                <div class=" new-arrival__banner-detail " *ngFor="let prod of getProducts">
+                                <div class=" new-arrival__banner-detail " *ngFor="let prod of products; let i = index">
                                     <div class="relate">
                                         <img [src]="prod.ProductImg" alt="" class="img-responsive">
                                         <div class="featured__icon-cart">
@@ -115,9 +116,9 @@
                     <div class="col-md-9 col-sm-9 col-md-offset-3 col-sm-offset-3  padd-rt0">
                         <div class="new-arrival__slider">
                                 <swiper [config]="newCatConfig" [(index)]="index">
-                                    <div class=" new-arrival__banner-detail " *ngFor="let newCat of allCatArrayObj">
+                                    <div class=" new-arrival__banner-detail " *ngFor="let newCat of newArrivalProducts">
                                         <div class="relate">
-                                            <img [src] = "newCat.imgUrl" alt="" class="img-responsive">
+                                            <img [src] = "newCat.ProductImg" alt="" class="img-responsive">
                                             <div class="featured__icon-cart">
                                                 <i class="fa fa-shopping-cart"></i>
                                             </div>
@@ -126,9 +127,9 @@
                                             </div>
                                         </div>
                                         <div class="get-left">
-                                            <h3 class="homepg-slider-product-cost"><i class="fa fa-inr" aria-hidden="true"></i>{{newCat.cost}}</h3>
+                                            <h3 class="homepg-slider-product-cost"><i class="fa fa-inr" aria-hidden="true"></i>{{newCat.ProductPrice}}</h3>
                                             <h4 class="homepg-slider-product-name text-uppercase">
-                                                {{newCat.prodName}}
+                                                {{newCat.ProductName}}
                                             </h4>
                                             <div class="abslt-buynow-btn">
                                                 <button class="btn buynow--btn btn--mob-modal text-uppercase">buy</button>
